--- a/bin/doc/IBEHTMLDoc.css
+++ b/bin/doc/IBEHTMLDoc.css
@@ -1,5 +1,5 @@
 pre
- {font-family: JetBrains Mono, monospace;
+ {font-family: Courier New, monospace;
   font-size: 10pt;
   background: #FFFFFF;
   margin: 4pt  4pt  3pt  25px;
